--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,15 @@ ffi=true
 verbosity=5
 optimizer = true
 optimizer_runs = 500
+fs_permissions = [{ access = "read-write", path = "./"}]
+
 
 [profile.profilecompiler]
 version = "0.8.0"
+
+[rpc_endpoints]
+base = "${BASE_RPC_URL}"
+
+[etherscan]
+base = { key = "${ETHERSCAN_API_KEY}" }
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
